fixed text-align for menu

--- a/template/css/main.css
+++ b/template/css/main.css
@@ -16,8 +16,8 @@ body article a{color:#000;}body article a:hover,body article a:visited{color:#64
 body #endlessText{display:block;position:absolute;top:40px;right:40px;padding:5px;height:200px;}body #endlessText p{width:95%;}
 body .projekktor{margin-bottom:1px;}
 body #menuContainer{position:absolute;background-color:#000;}body #menuContainer .menuContainerInner{width:140px;}body #menuContainer .menuContainerInner .menu{margin:0px;padding:0px;list-style:none;}body #menuContainer .menuContainerInner .menu li{margin:0px;padding:0px;line-height:0.9;}body #menuContainer .menuContainerInner .menu li a{padding:2px 4px;color:#fff;text-decoration:none;display:inline-block;*display:inline;zoom:1;padding:1px;}body #menuContainer .menuContainerInner .menu li a:hover{color:#8b8b8b;background-color:#fff;}
-body #menuContainer #menuMain{float:right;margin:3px 3px 15px 0px;text-align:right;}
-body #menuContainer #menuSub{float:left;margin:0px 0px 3px 3px;}
+body #menuContainer #menuMain{float:right;margin:3px 3px 15px 0px;}
+body #menuContainer #menuSub{float:left;margin:0px 0px 3px 3px;text-align:right;}
 body #info{position:absolute;left:0px;bottom:0px;z-index:-5;}body #info ul{list-style-type:none;color:#8b8b8b;padding:0;margin:0;}body #info ul li{line-height:1.2;}
 body #info ul .dark{color:#000000;}
 body #controls{position:absolute;right:0px;bottom:0px;}
